fit_predictor/tsp_gls/evaluates/run27/2024-12-22_23-43-39/problem_iter3_response12.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 8, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 16
    common_neighbors = np.intersect1d(np.argsort(distance_matrix[i, ~np.isin(np.arange(n), [i]))[1:], np.argsort(distance_matrix[j, ~np.isin(np.arange(n), [j]))[1:]))
                                                                                               ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 16
    common_neighbors = np.intersect1d(np.argsort(distance_matrix[i, ~np.isin(np.arange(n), [i]))[1:], np.argsort(distance_matrix[j, ~np.isin(np.arange(n), [j]))[1:]))
                                                                                               ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
